# tldr-bot

./: CLAUDE.md  Makefile  README.md  architecture.md  pyproject.toml  requirements.txt  state.json
.githooks/: pre-commit
.github/: CLAUDE.md
.github/workflows/: ci.yml  digest.yml  replay-notebooklm.yml
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: GSD-REFERENCE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/cache/: openrouter_models.json
data/digests/: 2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  (+25 more)
docs/: drift-register.md  operations.md  youtube-investigation.md
prompts/: digest.txt  summarize.txt  youtube_summarize.txt
scripts/: __init__.py  extract_pipeline_outputs.py  extract_processed_urls.py  replay_notebooklm_failures.py  validate_claude_sync.py  write_run_history_summary.py
src/: CLAUDE.md  _config.py  _failures.py  _prompts.py  _types.py  _url_utils.py  content_fetcher.py  digest_generator.py  main.py  notebooklm_summarizer.py  summarizer.py  telegram_client.py  workflow_commit_strategy.py  x_content_fetcher.py  youtube_summarizer.py
tests/: CLAUDE.md  test_ci_scripts.py  test_content_fetcher.py  test_digest_generator.py  test_main.py  test_replay_recovery.py  test_run_history.py  test_summarizer.py  test_telegram_client.py  test_telemetry.py  test_validate_claude_sync.py  test_workflow_commit_strategy.py  test_x_content_fetcher.py  test_youtube_summarizer.py
(+173 files in other folders)
